--- a/src/components/spinner/index.scss
+++ b/src/components/spinner/index.scss
@@ -26,10 +26,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 20px solid rgb(13, 84, 97);
+        border: 20px solid #085178b4;
         box-shadow: inset 0px 0px 0px 4px rgb(255,215,0);
         box-sizing: border-box;
-        
+        // #085178af, #85d8ceb0
     }
     .face1 {
         transform: translateZ(100px);
