--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -1,119 +1,129 @@
 
 .contact-form {
-    width: 100%;
-    margin-top: 360px;
-    min-width: 100%;
+  width: 100%;
+  min-width: 100%;
+  margin-top: 2rem;
 
-  
-    ul {
-      padding: 0;
-      margin: 0;
-  
-      li {
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        margin-bottom: 10px;
-        opacity: 0;
-        overflow: hidden;
-        display: block;
-        clear: both;
-        position: relative;
-        animation: fadeInUp 2s 2s;
-        animation-fill-mode: forwards;
-      }
-  
-      li.half {
-        width: 49%;
-        margin-left: 2%;
-        float: left;
-        clear: none;
-  
-        &:first-child {
-          margin-left: 0;
-        }
-      }
-    }
-  
-    input[type='text'],
-    input[type='email'] {
-      width: 100%;
-      border: 0;
-      background: #115173;
-      height: 50px;
-      font-size: 12px;
-      color: #fff;
-      padding: 0 20px;
-      box-sizing: border-box;
-     
-    }
-    input[type='text']:focus, input[type='email']:focus, textarea:focus{
-      outline-color: #ffd700;
-      
-    }
-  
-    textarea {
-      width: 100%;
-      border: 0;
-      background: #115173;
-      height: 50px;
-      font-size: 14px;
-      color: #fff;
-      padding: 20px;
-      box-sizing: border-box;
-      min-height: 150px;
-      resize: none;
-    }
-  
-    .flat-button {
-      color: #ffd700;
-      
-      font-weight: 700;
-      //color: #ffd700;
-      font-size: 11px;
-      letter-spacing: 3px;
-      text-decoration: none;
-      padding: 8px 8px;
-      border: 2px solid #ffd700;
-      float: left;
-      border-radius: 4px;
-      background: 0 0;
-      text-transform: uppercase;
-      float: right;
-      text-align: center;
-      margin-right: 10px;
-    }
-    .flat-button:hover{
-      background-color: #ffd700;
-      color: #181818;
-    }
-    .flat-button:active{
-      transition-delay: 250ms;
-      background-color: #198754;
-    }
-  }
-  .map-wrap {
-    float: right;
-    //background: rgba(8, 253,216,0.1);
-    margin-top: 14px;
-    margin-right: 10px;
-    margin-bottom: 14px;
-    width: 50%;
-    height: 95%;
-   
-   }
-  
-  .leaflet-container {
-    width: 100%;
-    height: 100%;
+  ul {
+    display:  grid;
+    gap: 0.3rem 0.2rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    padding: 0;
     position: relative;
-    opacity: 0  ;
-    animation: backInRight 1s 1.2s;
-    animation-fill-mode: forwards;
-    z-index: 2;
-    border: #115173;
+    
+
+    li {
+      
+      list-style: none;
+      opacity: 0;
+      overflow: hidden;
+      
+      animation: fadeInUp 2s 2s;
+      animation-fill-mode: forwards;
+    }
+    li.emne{
+    grid-row: 2;
+    grid-column: 1/3;
+    }
+    li.textBox{
+      grid-row: 3;
+      grid-column: 1/3;
+    }
+   li.buttonPlacement{
+    grid-row: 4;
+    grid-column: 1/3;
+   }
+   
   }
-  .container.contact-page .text-zone, .container.about-page .text-zone {
-    top: 20%;
+
+  input[type='text'],
+  input[type='email'] {
+    width: 100%;
+    border: 0;
+    background: #115173;
+    height: 3.5rem;
+    font-size: 1rem;
+    color: #fff;
+    padding: 0 1.2rem;
+    border-radius: 0.3rem;
+    box-shadow:0 0 10px 4px rgba(0,0,0,0.12);
+    
+   
+  }
+  input{
+    input:autofill{
+     border: 3px solid olive;
+    }
   }
   
+  *:focus {outline:none !important}
+  input[type='text']:focus, input[type='email']:focus, textarea:focus{
+  
+    border: 2px solid #ffd700;
+  }
+  
+  textarea {
+    width: 100%;
+    border: 0;
+    background: #115173;
+    height: 50px;
+    font-size: 1rem;
+    color: #fff;
+    padding: 1.2rem;
+    box-sizing: border-box;
+    min-height: 150px;
+    resize: none;
+    border-radius: 0.3rem;
+    box-shadow:0 0 10px 4px rgba(0,0,0,0.12);
+  }
+
+  .flat-button {
+    width: 50%;
+    color: #ffd700;
+    font-size: 0.8rem;
+    letter-spacing: 3px;
+    text-decoration: none;
+    padding: 8px 8px;
+    border: 2px solid #ffd700;
+    float: left;
+    border-radius: 4px;
+    background: 0 0;
+    text-transform: uppercase;
+    text-align: center;
+    float: right;
+    
+  }
+  .flat-button:hover{
+    background-color: #ffd700;
+    color: #181818;
+   
+  }
+  .flat-button:active{
+    transition-delay: 250ms;
+    background-color: #198754;
+    
+  }
+}
+.map-wrap {
+  float: right;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  width: 50%;
+  height: 95%;
+ 
+ }
+
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  opacity: 0  ;
+  animation: backInRight 1s 1.2s;
+  animation-fill-mode: forwards;
+  z-index: 2;
+  border: #115173;
+}
+
+
