--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -3,28 +3,27 @@
       position: absolute;
       left: 10%;
       top: 35%;
-     
       width: 55%;
       max-height: 90%;
     }
   
     h1 {
       color: #fff;
-      font-size: 56px;
+      font-size: 4rem;
       line-height: 53px;
       margin: 0;
-      font-family: 'Raleway';
-      font-weight: 600;
+      font-family: 'Bebas Neue', "cursive";
+      
   
       &:before {
         content: '<h1>';
-        font-family: 'La Belle Aurore', cursive;
+        font-family: 'La Belle Aurore' , "cursive";
         color: #ffd700;
         font-size: 18px;
         position: absolute;
         margin-top: -40px;
         left: -15px;
-        opacity: 0.6;
+        opacity: 0.8;
       }
   
       &:after {
@@ -35,39 +34,32 @@
         position: absolute;
         margin-top: 18px;
         margin-left: 20px;
-        opacity: 0.6;
+        opacity: 0.8;
       }
   
-      img {
-        margin-left: 20px;
-        opacity: 0;
-        width: 32px;
-        height: auto;
-        animation: rotateIn 1s linear both;
-        animation-delay: 1.4s;
-      }
+      
     }
   
     h2 {
       color: #C0C0C0;
-      margin-top: 20px;
-      font-weight: 700;
-      font-size: 11px;
-      font-family: sans-serif;
+      margin-top: 1rem;
+      font-weight: 300;
+      font-size: 0.8rem;
+      font-family: "Oxygen", 'sans-serif';
       letter-spacing: 3px;
       animation: fadeIn 1s 0.3s backwards;
     }
   
     .flat-button {
       color: #ffd700;
-      font-size: 13px;
+      font-size: 1rem;
       font-weight: 400;
       letter-spacing: 4px;
-      font-family: sans-serif;
+      font-family: "Oxygen", 'sans-serif';
       text-decoration: none;
       padding: 10px 18px;
       border: 1px solid #ffd700;
-      margin-top: 11px;
+      margin-top: 0.5rem;
       float: left;
       animation: fadeIn 1s 0.6s backwards;
       white-space: nowrap;
