--- a/src/components/alerts/index.scss
+++ b/src/components/alerts/index.scss
@@ -1,5 +1,5 @@
 .Toastify__toast {
     background-color: #fff ;
     font-size: 16px;
-    font-family: 'Helvetica Neue';
+    font-family: 'Oxygen', sans-serif;
 }
