--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -11,12 +11,12 @@
   }
   
   .tags {
-    color: #ffd700;
+    color: var(--textColor-yellow);
     opacity: 0.8;
     position: absolute;
     bottom: 0;
     left: 8.5rem;
-    font-size: 1.5rem;
+    font-size: 1.125rem;
     font-family: 'La Belle Aurore', cursive;
     
   }
@@ -53,118 +53,51 @@
   
   
       h1 {
-        font-size: 4rem;
-        font-family: 'Bebas Neue';
-        color: #ffd700;
+        color: var(--textColor-yellow);
         margin-top: 0;
         position: relative;
-        margin-bottom: 40px;
-        left: -2px;
+        margin-bottom: 2.5rem;
         
         
         &:before {
           content: '<h1>';
-          font-family: 'La Belle Aurore', cursive;
-          color: #ffd700;
-          font-size: 18px;
+          font-family: var(--font-cursiveHeader);
+          color: var(--textColor-yellow);
+          font-size: 1.125rem;
           position: absolute;
-          margin-top: -10px;
-          left: -10px;
+          margin-top: -0.625rem;
+          left: -0.625rem;
           opacity: 0.8;
-          line-height: 18px;
+          line-height: 1.125rem;
         }
   
         &:after {
           content: '<h1/>';
           font-family: 'La Belle Aurore', cursive;
-          color: #ffd700;
+          color: var(--textColor-yellow);
           font-size: 18px;
           line-height: 18px;
           position: absolute;
-          left: -30px;
-          bottom: -20px;
-          margin-left: 20px;
+          left: -1.875rem;
+          bottom: -1.25rem;
+          margin-left: 1.25rem;
           opacity: 0.8;
         }
       }
   
       p {
         font-size: 1rem;
-        color: #FFFAFA;
-        font-family: "Oxygen", sans-serif;
+        color: var(--textColor-primary);
+        font-family: var(--font-base);
         max-width: fit-content;
         opacity: 1;
         animation: fadeIn 2s;
-        
-      
-        
       }
     }
-  
     .text-animate-hover {
       &:hover {
         color: #fff;
       }
     }
   }
-.about-page
-.contact-page {
-  .text-zone{
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    width: 35%;
-    vertical-align: middle;
-    display: table-cell;
-    max-height: 90%;
 
-    h1{
-      font-size: 3rem;
-      font-family: 'Bebas Neue' ;
-      color: #ffd700;
-      margin-top: 0 ;
-      position: relative;
-      margin-bottom: 40px;
-      left: 10px;
-
-      &::before{
-        content: '<h1>';
-        font-family: 'La Belle Aurore';
-        font-size: 18px;
-        position: absolute;
-        margin-top: -10px;
-        left:-10px;
-        opacity: 0.8;
-        line-height: 18px;
-      }
-      &::after{
-        content: '<h1>';
-        font-family: 'La Belle Aurore';
-        font-size: 18px;
-        line-height: 18px;
-        position: absolute;
-        left: -30px;
-        bottom: -20px;
-        margin-left: -20px;
-        opacity: 0.8;
-      }
-      p{
-        font-style: 1rem;
-        color: #FFFAFA;
-        font-family: "Oxygen" "sans-serif";
-        font-weight: 300;
-        min-width: fit-content;
-        animation: pulse 1s;
-        &:nth-of-type(1){
-          animation-delay: 1.1s;
-        }
-        &:nth-of-type(2){
-          animation-delay: 1.1s;
-        }
-        &:nth-of-type(3){
-          animation-delay: 1.1s;
-        }
-      }
-    }
-  }
-}
