--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -47,47 +47,47 @@
     color: #fff;
     padding: 0 1.2rem;
     border-radius: 0.3rem;
-    box-shadow:0 0 10px 4px rgba(0,0,0,0.12);
+    box-shadow:0 0 0.625rem 0.25rem rgba(0,0,0,0.12);
     
    
   }
   input{
     input:autofill{
-     border: 3px solid olive;
+     border: 0.1875rem solid olive;
     }
   }
   
   *:focus {outline:none !important}
   input[type='text']:focus, input[type='email']:focus, textarea:focus{
   
-    border: 2px solid #ffd700;
+    border: 0.125rem solid #ffd700;
   }
   
   textarea {
     width: 100%;
     border: 0;
     background: #115173;
-    height: 50px;
+    height: 3.125rem;
     font-size: 1rem;
     color: #fff;
     padding: 1.2rem;
     box-sizing: border-box;
-    min-height: 150px;
+    min-height: 9.735rem;
     resize: none;
     border-radius: 0.3rem;
-    box-shadow:0 0 10px 4px rgba(0,0,0,0.12);
+    box-shadow:0 0 0.625rem 0.25rem rgba(0,0,0,0.12);
   }
 
   .flat-button {
     width: 50%;
     color: #ffd700;
     font-size: 0.8rem;
-    letter-spacing: 3px;
+    letter-spacing: 0.1875rem;
     text-decoration: none;
-    padding: 8px 8px;
-    border: 2px solid #ffd700;
+    padding: 0.5rem 0.5rem;
+    border: 0.125rem solid #ffd700;
     float: left;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     background: 0 0;
     text-transform: uppercase;
     text-align: center;
@@ -95,8 +95,8 @@
     
   }
   .flat-button:hover{
-    background-color: #ffd700;
-    color: #181818;
+    background-color: var(--hover-background);
+    color: var(--hover-color);
    
   }
   .flat-button:active{
@@ -123,7 +123,6 @@
   animation: backInRight 1s 1.2s;
   animation-fill-mode: forwards;
   z-index: 2;
-  border: #115173;
 }
 
 
