--- a/src/components/AnimateLetters/index.scss
+++ b/src/components/AnimateLetters/index.scss
@@ -3,18 +3,18 @@
     opacity: 0;
     animation: bounceIn 1s 1s;
     animation-fill-mode: forwards;
-    min-width: 10px;
+    min-width: 0.625rem;
 }
 .text-animate-hover {
-    min-width: 10px;
+    min-width: 0.625rem;
     display: inline-block;
     animation-fill-mode: both;
 
     &:hover{animation: rubberBand 1s;
-    color: #ffd700;}
+    color: var(--textColor-yellow);}
 }
 @for $i from 1 through 32 {
     .text-animate._#{$i}{
-        animation-delay: #{$i/15+0.35 }s;
+        animation-delay: #{calc($i/15)+0.35 }s;
     }
 }
