--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -67,6 +67,11 @@ nav {
             content: 'CONTACT';
         }
     }
+    a.portfolio-link{
+        &::after{
+            content: 'PORTFOLIO';
+        }
+    }
     a.active {
         svg{
             color: #ffd700;
