--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -3,3 +3,8 @@
         width: 100%;
         height: 100%;
 }
+.text-block{
+        padding-left: 0.25rem;
+        padding-right: 0.25rem;
+        
+}
