--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -5,86 +5,50 @@
   height: 100%;
 }
 .contact-form {
-  width: 50%;
   min-width: 100%;
-  margin-top: 2rem;
-
-  ul {
-    display:  grid;
-    gap: 0.3rem 0.2rem;
-    grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    padding: 0;
-    position: relative;
-    
-
-    li {
-      
-      list-style: none;
-      opacity: 1;
-      overflow: hidden;
-      
-      //animation: fadeInUp 2s 2s;
-      //animation-fill-mode: forwards;
-    }
-    li.emne{
-    grid-row: 2;
-    grid-column: 1/3;
-    }
-    li.textBox{
-      grid-row: 3;
-      grid-column: 1/3;
-    }
-   li.buttonPlacement{
-    grid-row: 4;
-    grid-column: 1/3;
-   }
-   
-  }
-
-  input[type='text'],
-  input[type='email'] {
-    width: 100%;
+    column-gap: 0.25rem;
+    row-gap: 0.25rem;
+  .input-item{
     border: 0;
     background: #115173;
-    height: 3.5rem;
+    height: 3rem;
     font-size: 1rem;
-    color: #fff;
-    padding: 0 1.2rem;
     border-radius: 0.3rem;
     box-shadow:0 0 0.625rem 0.25rem rgba(0,0,0,0.12);
-    
-   
+    padding-left: 0.5rem;
   }
-  input{
-    input:autofill{
-     border: 0.1875rem solid olive;
-    }
+  .topic{
+    grid-row: 2;
+    grid-column: 1/3;
   }
-  
-  *:focus {outline:none !important}
-  input[type='text']:focus, input[type='email']:focus, textarea:focus{
-  
-    border: 0.125rem solid #ffd700;
-  }
-  
+ 
   textarea {
-    width: 100%;
+    grid-row: 3;
+    grid-column: 1/3;
+    padding-top: 1rem;
     border: 0;
     background: #115173;
     height: 3.125rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #fff;
-    padding: 1.2rem;
-    box-sizing: border-box;
     min-height: 9.735rem;
     resize: none;
     border-radius: 0.3rem;
     box-shadow:0 0 0.625rem 0.25rem rgba(0,0,0,0.12);
+   
   }
-
+  *:focus {outline:none !important}
+  input[type='text']:focus, input[type='email']:focus, textarea:focus{
+  
+    border: 0.1rem solid #ffd700;
+  }
   .flat-button {
-    width: 50%;
+    grid-row: 4;
+    grid-column: 2/3;
+    width: 100%;
     color: #ffd700;
     font-size: 0.8rem;
     letter-spacing: 0.1875rem;
