--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -1,10 +1,11 @@
-.motionAbout{
-        position: relative;
-        width: 100%;
-        height: 100%;
+.motionAbout {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
-.text-block{
-        padding-left: 0.25rem;
-        padding-right: 0.25rem;
-        
+.text-block {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  letter-spacing: 0.05rem;
+  line-height: 1.5;
 }
