--- a/src/App.scss
+++ b/src/App.scss
@@ -1,21 +1,24 @@
-
-
 @import 'animate.css';
 
-
-
 @font-face {
-  font-family:  'La Belle Aurore';
+  font-family: 'La Belle Aurore';
   src: url('./assets/fonts/LaBelleAurore.woff2') format('woff2'),
     url('./assets/fonts/LaBelleAurore.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Bebas Neue', cursive;
-  src: url('./assets/fonts/BebasNeue-Regular.ttf');
+  font-family: 'bebas neue pro bold';
+  src: url('./assets/fonts/Bebas\ Neue\ Pro\ Bold.otf');
 }
-
+@font-face {
+  font-family: 'bebas neue pro regular';
+  src: url('./assets/fonts/Bebas\ Neue\ Pro\ Regular.otf');
+}
+@font-face {
+  font-family: 'bebas neue pro light';
+  src: url('./assets/fonts/Bebas\ Neue\ Pro\ Light.otf');
+}
 @font-face {
   font-family: 'Montserrat', sans-serif;
   src: url('./assets/fonts/Montserrat-VariableFont_wght.ttf');
@@ -26,27 +29,27 @@
   src: url('./assets/fonts/Lato-Thin.ttf');
 }
 
-input, 
+input,
 textarea {
-  font-family: var(--font-base);
+  font-family: var(--font-test);
 }
 
 body {
   margin: 0;
-  font-family:  var(--font-base);
-  font-size:  1rem;
+  font-family: var(--font-test);
+  font-size: 1rem;
   line-height: 1.7;
   overflow: hidden;
   display: block;
 }
 .page {
- 
-  background-image:  
-   linear-gradient(to right, var(--color-primary), var(--color-secondary)),
-   url('../src/assets/images/sky1920x1280.png');
-   background-size: cover;
-  
-
+  background-image: linear-gradient(
+      to right,
+      var(--color-primary),
+      var(--color-secondary)
+    ),
+    url('../src/assets/images/sky1920x1280.png');
+  background-size: cover;
 }
 :root {
   // COLORS
@@ -55,40 +58,37 @@ body {
   // .TEXT
   --textColor-primary: antiquewhite;
   --textColor-yellow: #ffd700;
-  --textColor-light: rgba(255,255,255, 0.6);
-  
-  // FONTS
-  //--font-primaryHeader: 'Lato-regular', 'sans-serif';
-  --font-primaryHeader: 'Bebas Neue', 'cursive';
-  --font-cursiveHeader: 'La Belle Aurore', 'cursive';
- 
-  --font-base: 'Lato', 'sans-serif';
-  --font-test: 'Montserrat', 'sans-serif';
+  --textColor-light: rgba(255, 255, 255, 0.6);
 
+  // FONTS
+  --font-primaryHeader: 'bebas neue pro bold', sans-serif;
+  --font-primaryHeaderRegular: 'bebas neue pro regular', sans-serif;
+  --font-cursiveHeader: 'La Belle Aurore', 'cursive';
+
+  --font-base: 'Lato', 'sans-serif';
+  --font-test: 'bebas neue pro light', sans-serif;
+  //--font-test: 'Montserrat', sans-serif;
 
   //Hover
   --hover-background: var(--textColor-yellow);
   --hover-color: #333;
 
-  h1{
+  h1 {
     font-size: 4rem;
     font-family: var(--font-primaryHeader);
-    color:  var(--textColor-primary);
-    font-weight: 400;
+    color: var(--textColor-primary);
   }
-  h2{
+  h2 {
     font-size: 1rem;
     font-family: var(--font-primaryHeader);
     //color: var(--textColor-light);
-    color: #A9A9A9
-    
-    
+    color: #a9a9a9;
   }
-  
-//  SKY #CAEBF2
-//  CARBON #A9A9A9
-//  NEUTRAL #EFEFEF
-//
-// 
-//
+
+  //  SKY #CAEBF2
+  //  CARBON #A9A9A9
+  //  NEUTRAL #EFEFEF
+  //
+  //
+  //
 }
