--- a/src/components/PortfolioLoadingScreen/index.scss
+++ b/src/components/PortfolioLoadingScreen/index.scss
@@ -1,4 +1,4 @@
-.flex-containerPortfolio {
+.grid-containerPortfolio {
   //background-color: rgb(0, 255, 255, 0.2);
   margin: auto;
   display: grid;
@@ -7,28 +7,31 @@
   border-radius: 1rem;
   animation: fadeInLeft 0.75s;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 12rem 12rem 12rem;
+  grid-template-rows: repeat(6, 1fr);
 }
-h1.portfolio-headline {
-  grid-row: 2;
+.title {
+  margin-top: 6.5rem;
+  height: 65%;
+  display: flex;
+  grid-row: 2 /4;
   grid-column: 2/3;
   font-size: 10rem;
   letter-spacing: 1rem;
-
-  margin-block-end: 0;
-  margin-block-start: 0;
+  font-family: var(--font-primaryHeader);
+  color: var(--textColor-primary);
+  font-weight: 400;
 }
+
 .box-display {
-  margin-top: 1.5rem;
   position: relative;
-  grid-row: 3;
+  grid-row: 4/5;
   grid-column: 2/3;
   height: 2rem;
   font-size: 1.5rem;
   letter-spacing: 0.2rem;
   font-family: var(--font-test);
   color: var(--textColor-yellow);
-  //color: var(--textColor-primary);
+
   text-transform: uppercase;
 
   line-height: 1.25;
@@ -72,6 +75,12 @@ ul.animation-list {
 }
 
 .scrolling-indicator {
-  grid-row: 3;
+  display: flex;
+  margin-top: -6rem;
+  grid-row: 5/6;
   grid-column: 2/3;
+  height: 5rem;
+  background-color: blanchedalmond;
+  width: 50%;
+  margin-left: 25%;
 }
