--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,7 @@ body {
   --font-primaryHeaderRegular: 'bebas neue pro regular', sans-serif;
   --font-cursiveHeader: 'La Belle Aurore', 'cursive';
 
-  --font-base: 'Lato', 'sans-serif';
+  --font-base: 'Lato', sans-serif;
   --font-test: 'bebas neue pro light', sans-serif;
   //--font-test: 'Montserrat', sans-serif;
 
