--- a/src/components/PortfolioLoadingScreen/index.scss
+++ b/src/components/PortfolioLoadingScreen/index.scss
@@ -3,8 +3,8 @@
   margin: auto;
   display: grid;
   width: 90%;
-  height: 100%;
-  border-radius: 1rem;
+  height: 1080px;
+
   animation: 1.5s fadeIn ease-in 1;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(6, 1fr);
@@ -18,10 +18,7 @@
   }
 }
 .title {
-  margin-top: 6.5rem;
-  height: 65%;
-  display: flex;
-  grid-row: 2 /4;
+  grid-row: 3;
   grid-column: 2/3;
   font-size: 10rem;
   letter-spacing: 1rem;
@@ -31,8 +28,7 @@
 }
 
 .box-display {
-  position: relative;
-  grid-row: 4/5;
+  grid-row: 4;
   grid-column: 2/3;
   height: 2rem;
   font-size: 1.5rem;
@@ -40,7 +36,7 @@
   font-family: var(--font-test);
   color: var(--textColor-yellow);
   text-transform: uppercase;
-
+  margin-top: -1.5rem;
   overflow: hidden;
 }
 
@@ -99,7 +95,7 @@ ul.animation-list {
 .scrolling-indicator {
   display: flex;
   margin: auto;
-  grid-row: 6;
+  grid-row: 5;
   grid-column: 2/3;
   height: 5rem;
 
