--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -1,77 +1,73 @@
-.grid-container-portfolio{
-   
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    width: 70%;
-    height: 92%;
-    border-radius: 0.5rem;
-    
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 7rem 4fr 3fr 1fr;
-    grid-auto-rows: 1rem;
-    row-gap: 0.5rem;
-    column-gap: 0.25rem;
-    
+.grid-container-portfolio {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  width: 70%;
+  height: 100vh;
+  border-radius: 0.5rem;
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 7rem 4fr 3fr 1fr;
+  grid-auto-rows: 1rem;
+  row-gap: 0.5rem;
+  column-gap: 0.25rem;
 }
 
-h1.title{
-    margin-top: 2rem;    
-    color: var(--textColor-yellow);
-   grid-column:3/5;
-   padding-left: 0.75rem;
-   text-align: center;   
-   height: 4rem;
-   line-height: 1;
-   margin-bottom: 1.5rem;
-   letter-spacing: 0.5rem;
+h1.title-unique {
+  color: var(--textColor-yellow);
+  grid-column: 2/4;
+  padding-left: 0.75rem;
+  text-align: center;
+  height: 4rem;
+  line-height: 1;
+  margin-bottom: 1.5rem;
+  letter-spacing: 0.5rem;
 }
 
-.flex-container{
-    display: flex;
-    grid-column: 1/5;
-    grid-row: 2;
-    margin-left: 0.25rem;
-    margin-right: 0.25rem;
-    column-gap: 0.25rem;
+.flex-container {
+  display: flex;
+  grid-column: 1/5;
+  grid-row: 2;
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  column-gap: 0.25rem;
 }
 
-.flex-item{
-    flex: 1;
-    border-radius: 0.25rem;
+.flex-item {
+  flex: 1;
+  border-radius: 0.25rem;
 }
 
-.textzone-left{
-    font-family: var(--font-base);
-    color: rgba(0, 0, 0, 1);
-    grid-row: 3;
-    grid-column: 1/3;
-    border-radius: 0.5rem;
-    padding: 0.75rem;
-    margin-left: 0.25rem;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    
+.textzone-left {
+  font-family: var(--font-base);
+  background-color: #f4f4f4;
+  grid-row: 3;
+  grid-column: 1/3;
+  border-radius: 0.5rem;
+  padding: 0.75rem;
+  margin-left: 0.25rem;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-.textzone-right{
-    font-family: var(--font-base);
-    grid-row: 3;
-    background-color: #E6E6DC;
-    grid-column: 3/5;
-    border-radius: 0.5rem;
-    padding: 0.75rem;
-    margin-right: 0.25rem;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    
+.textzone-right {
+  font-family: var(--font-base);
+  grid-row: 3;
+  background-color: #f4f4f4;
+  grid-column: 3/5;
+  border-radius: 0.5rem;
+  padding: 0.75rem;
+  margin-right: 0.25rem;
+  box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
 }
 
-.navbar-bottom{
-    grid-column: 2/4;
-    grid-row: 4;
-    background-color: goldenrod;
-    border-radius: 0.25rem;
-    padding: 0.75rem;
-    margin: 0.25rem;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.navbar-bottom {
+  grid-column: 2/4;
+  grid-row: 4;
+  background-color: goldenrod;
+  text-align: center;
+  border-radius: 0.25rem;
+  padding: 0.75rem;
+  margin: 0.25rem;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
